# halberd

./: .ghci  CHANGELOG  LICENSE  README.md  halberd.cabal  test.hs
exe/: Halberd.hs
exe/Halberd/: UI.hs
src/: Halberd.hs
src/Data/Tuple/: Utils.hs
src/Halberd/: ChosenImports.hs  CollectNames.hs  Import.hs  LookupTable.hs  Suggestions.hs  Types.hs
src/Language/Haskell/Exts/: Utils.hs
tests/: Runner.hs
tests/input/: ResolveMultiple.hs  ResolveMultipleDifferentOrder.hs  ResolveSingle.hs  Unbound.hs
