name:                halberd
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable halberd
  build-depends:       base             >= 4.5    &&  < 4.7
                     , containers       >= 0.4    &&  < 0.6
                     , haskell-packages == 0.2.*
                     , haskell-names    == 0.1.*
                     , haskell-src-exts == 1.14.*
                     , Cabal            >= 1.17   &&  < 1.19
                     , filepath         == 1.3.*
                     , mtl              >= 2.0    &&  < 2.2
                     , tagged           >= 0.4    &&  < 0.8
                     , safe             == 0.3.*
                     , syb              >= 0.3    &&  < 0.5
  hs-source-dirs:      src
  main-is:             Halberd.hs
  ghc-options:         -Wall
