name:                halberd
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink, Simon Meier, Tom Lokhorst, Roman Cheplyaka
maintainer:          hesselink@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
synopsis:            A tool to generate missing import statements for Haskell modules.
description:         This tool uses <https://github.com/haskell-suite
                     the Haskell Suite> to determine the unbound
                     variables and types in your source code, and
                     generate import statements for them. If there are
                     multiple choices, it provides a simple
                     interactive menu for you to choose from. See the
                     home page for more details.
homepage:            http://github.com/haskell-suite/halberd/
extra-source-files:  CHANGELOG, README.md

executable halberd
  build-depends:       base             >= 4.5    &&  < 4.7
                     , containers       >= 0.4    &&  < 0.6
                     , haskell-packages == 0.2.*
                     , haskell-names    == 0.2.*
                     , haskell-src-exts == 1.14.*
                     , Cabal            >= 1.17   &&  < 1.19
                     , filepath         == 1.3.*
                     , mtl              >= 2.0    &&  < 2.2
                     , tagged           >= 0.4    &&  < 0.8
                     , safe             == 0.3.*
                     , syb              >= 0.3    &&  < 0.5
  hs-source-dirs:      src
  main-is:             Halberd.hs
  ghc-options:         -Wall

Source-Repository head
  Type:                git
  Location:            git://github.com/haskell-suite/halberd.git
