name:                halberd
version:             0.1.2.6
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink, Simon Meier, Tom Lokhorst, Roman Cheplyaka
maintainer:          hesselink@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
synopsis:            A tool to generate missing import statements for Haskell modules.
description:         This tool uses the Haskell Suite [0] to determine
                     the unbound variables and types in your source
                     code, and generate import statements for them. If
                     there are multiple choices, it provides a simple
                     interactive menu for you to choose from. See the
                     home page for more details.

                     [0] https://github.com/haskell-suite
homepage:            http://github.com/haskell-suite/halberd/
extra-source-files:  CHANGELOG, README.md

library
  build-depends:       base             >= 4.5    &&  < 4.8
                     , containers       >= 0.4    &&  < 0.6
                     , haskell-packages == 0.2.*
                     , haskell-names    >= 0.2    &&  < 0.4
                     , haskell-src-exts >= 1.14   &&  < 1.16
                     , Cabal            >= 1.16   &&  < 1.22
                     , mtl              >= 2.0    &&  < 2.2
                     , safe             == 0.3.*
                     , syb              >= 0.3    &&  < 0.5
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Halberd.ChosenImports
                     , Halberd.CollectNames
                     , Halberd.LookupTable
                     , Halberd.Suggestions
                     , Halberd.Types
  other-modules:       Data.Tuple.Utils
                     , Language.Haskell.Exts.Utils

executable halberd
  build-depends:       base             >= 4.5    &&  < 4.8
                     , Cabal            >= 1.16   &&  < 1.22
                     , halberd
                     , haskell-names    >= 0.2    &&  < 0.4
                     , haskell-packages == 0.2.*
                     , haskell-src-exts >= 1.14   &&  < 1.16
                     , mtl              >= 2.0    &&  < 2.2
                     , safe             == 0.3.*
                     , tagged           >= 0.4    &&  < 0.8
  hs-source-dirs:      exe
  main-is:             Halberd.hs
  ghc-options:         -Wall
  other-modules:       Halberd.UI

Test-suite halberd-tests
  build-depends:       base                 >= 4.5    && < 4.8
                     , Cabal                >= 1.16   && < 1.22
                     , containers           >= 0.4    && < 0.6
                     , halberd
                     , HUnit                == 1.2.*
                     , test-framework       == 0.8.*
                     , test-framework-hunit == 0.3.*
                     , haskell-names        >= 0.2    && < 0.4
                     , haskell-packages     == 0.2.*
                     , haskell-src-exts     >= 1.14   && < 1.16
                     , tagged               >= 0.4    && < 0.8
                     , split                == 0.2.*
                     , mtl                  >= 2.0    && < 2.2
  hs-source-dirs:      tests
  main-is:             Runner.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall

Source-Repository head
  Type:                git
  Location:            git://github.com/haskell-suite/halberd.git
